desktop version completed

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,19 @@
 // Mixins Here
+.center {
+    display: flex;
+    justify-content: center;
+}
+
+
+
+// parametric mixins
+.btn {
+    background: black;
+    color: white;
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: bold;
+    width: 30%;
+    padding: 2% 0;
+    border-radius: 5px;
+}
