--- a/less/global.less
+++ b/less/global.less
@@ -5,6 +5,7 @@
 
 html {
   font-size: 62.5%;
+  font-weight: bold;
 }
 
 html, body {
@@ -28,6 +29,7 @@ h3 {
 p {
   font-size: 1.6rem;
   line-height: 1.4;
+  color: @main-font-color;
 }
 
 .container {
