--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,9 +3,10 @@
 .home {
 
   .intro {
-
     h2 {
       padding: 15px;
+      text-align: left;
+      width: 100%;
     }
 
     p {
@@ -18,6 +19,18 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+
+    @media @mobile{ 
+      .blast {
+        width: 100%;
+      }
+      .sky {
+        display: none;
+      }
+      .launch {
+        display: none;
+      }
+    }
 
     img {
       width: 28%;
@@ -43,8 +56,11 @@
     margin-top: 60px;
     border-top: 1px solid @main-border-color;
     padding: 50px 60px;
-    display: flex;
-    justify-content: center;
+    .center();
+
+    @media @mobile{
+      margin-top: 25px;
+    }
 
     .walk-text {
       width: 50%;
@@ -57,8 +73,6 @@
         margin-bottom: 26px;
       }
 
-      .btn {
-      }
     }
 
     .walk-img {
