--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,40 @@
 // Navigation code here
+header {
+    .center();
+    flex-direction: column;
+    align-items: center;
+    height: 40%;
+
+    div {
+        background: @nav-bg;
+        width: 100%;
+        h1 {
+            font-size: 4.2rem;
+            text-align: center;
+        }
+        nav{
+            .center();
+            width: 100%;
+            
+            a{
+                text-decoration: none;
+                color: @nav-font;
+                font-size: 1.6rem;
+                padding: 1% 1.25%;
+
+                 @media @mobile{
+                     padding: 3% 3.8%;
+                 }
+            }
+
+        }
+    }
+    img {
+        max-width: 800px;
+
+        @media @mobile{
+            width: 100%;
+            border-radius: 5px;
+        }
+    }
+}
