--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,12 @@
   padding: 2% 0;
   border-radius: 5px;
 }
+@media (max-width: 500px) {
+  .btn {
+    width: 100%;
+    padding: 6% 0;
+  }
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -274,11 +280,20 @@ footer {
 }
 @media (max-width: 500px) {
   .home .walk {
+    flex-direction: column-reverse;
     margin-top: 25px;
+    padding: 15px;
+    align-items: center;
   }
 }
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+    margin-top: 20px;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -289,6 +304,12 @@ footer {
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin-left: 0;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
