--- a/less/home-page.less
+++ b/less/home-page.less
@@ -59,11 +59,19 @@
     .center();
 
     @media @mobile{
+      flex-direction: column-reverse;
       margin-top: 25px;
+      padding: 15px;
+      align-items: center;
     }
 
     .walk-text {
       width: 50%;
+
+      @media @mobile{ 
+        width: 100%;
+        margin-top: 20px;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -79,6 +87,11 @@
       width: 46%;
       margin-left: 4%;
       
+      @media @mobile{
+      width: 100%;
+      margin-left: 0;
+      }
+
       img {
         width: 100%;
         height: auto;
