--- a/less/mixins.less
+++ b/less/mixins.less
@@ -16,4 +16,9 @@
     width: 30%;
     padding: 2% 0;
     border-radius: 5px;
+
+    @media @mobile{ 
+    width: 100%;
+    padding: 6% 0;
+    }
 }
