--- a/css/index.css
+++ b/css/index.css
@@ -1,23 +1,3 @@
-.center {
-  display: flex;
-  justify-content: center;
-}
-.btn {
-  background: black;
-  color: white;
-  text-align: center;
-  font-size: 1.8rem;
-  font-weight: bold;
-  width: 30%;
-  padding: 2% 0;
-  border-radius: 5px;
-}
-@media (max-width: 500px) {
-  .btn {
-    width: 100%;
-    padding: 6% 0;
-  }
-}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -300,6 +280,27 @@ footer {
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
+}
+.home .walk .walk-text .btn {
+  text-align: center;
+  width: 30%;
+  padding: 2% 0;
+  border-radius: 5px;
+  background: #22283A;
+  color: #F1F1F1;
+  font-size: 1.8rem;
+  font-weight: bold;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    padding: 6% 0;
+  }
+}
+.home .walk .walk-text .btn:hover {
+  color: #22283A;
+  background: #F1F1F1;
+  border: 1px solid black;
 }
 .home .walk .walk-img {
   width: 46%;
