--- a/less/variables.less
+++ b/less/variables.less
@@ -21,7 +21,9 @@
 @porcelain: #F6F7F8;
 @waterloo: #81848E;
 @btn-bg-color: #22283A;
+@btn-text-color: @sea-shell;
 @border-real: #dee2e6;
+
 
 // Mobile var
 @mobile: ~"(max-width: 500px)";
